// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svelte/UITooltip renders correctly - basic 1`] = `
<div>
  <div
    aria-label="Test"
    class="ui-tooltip ui-tooltip--top"
    role="tooltip"
  >
     
  </div>
</div>
`;

exports[`svelte/UITooltip renders correctly - basic 2 1`] = `
<div>
  <div
    aria-label="Test"
    class="ui-tooltip ui-tooltip--described"
    role="tooltip"
  >
    <button>
      i
    </button>
     
  </div>
</div>
`;

exports[`svelte/UITooltip renders correctly - basic 2 2`] = `
<div>
  <div
    aria-label="Test"
    class="ui-tooltip"
    role="tooltip"
  >
    <button>
      i
    </button>
     
  </div>
</div>
`;

exports[`svelte/UITooltip renders correctly - with description 1`] = `
<div>
  <div
    aria-label="Test"
    class="ui-tooltip ui-tooltip--top--described"
    role="tooltip"
  >
    <button>
      i
    </button>
     
    <span
      class="ui-tooltip__description"
      role="status"
    >
      More info
    </span>
  </div>
</div>
`;

exports[`svelte/UITooltip renders correctly - with description 2`] = `
<div>
  <div
    aria-label="Test"
    class="ui-tooltip ui-tooltip--top"
    role="tooltip"
  >
    <button>
      i
    </button>
     
  </div>
</div>
`;
